Apply suggested changes