@@ -36,7 +36,7 @@ public class Day1 extends Day {
     public Object part2() {
         int increases = 0;
 
-        List<List<Integer>> windows = IntStream.rangeClosed(0, measurements.size() - 3).mapToObj(i -> measurements.subList(i, i + 3)).collect(Collectors.toList());
+        List<List<Integer>> windows = IntStream.rangeClosed(0, measurements.size() - 3).mapToObj(i -> measurements.subList(i, i + 3)).toList();
         for (int i = 1; i < windows.size(); i++) {
             if (sum(windows.get(i)) > sum(windows.get(i-1))) increases++;
         }
